--- a/RetroCalculator/Base.lproj/Main.storyboard
+++ b/RetroCalculator/Base.lproj/Main.storyboard
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="RetroCalculator" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +17,187 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="space-bg" translatesAutoresizingMaskIntoConstraints="NO" id="ul7-Ph-JcA"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ground" translatesAutoresizingMaskIntoConstraints="NO" id="KlD-tY-xdj">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="57" id="Iuv-e3-0AX"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="counter" translatesAutoresizingMaskIntoConstraints="NO" id="Hgg-ki-wDK">
+                                <frame key="frameInset" minX="14" minY="20" width="346" height="123"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="105" id="QQM-3U-npz"/>
+                                    <constraint firstAttribute="width" constant="316" id="Unq-PV-VFe"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="backpanel" translatesAutoresizingMaskIntoConstraints="NO" id="ut0-bD-7Ay">
+                                <frame key="frameInset" minX="26" minY="123" width="323" height="544"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" distribution="fillEqually" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="Rk5-zJ-cwr">
+                                <frame key="frameInset" minX="64" minY="168" width="247" height="75"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UrU-H4-Dgz">
+                                        <frame key="frameInset" width="73" height="75"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="75" id="pFm-zA-o12"/>
+                                            <constraint firstAttribute="width" constant="73" id="sfL-LU-OSv"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <state key="normal" image="7"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gfr-8A-mBL">
+                                        <frame key="frameInset" minX="87" width="73" height="75"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="75" id="BCQ-4v-v2f"/>
+                                            <constraint firstAttribute="width" constant="73" id="QQD-BQ-U2a"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <state key="normal" image="8"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2D0-Dl-oD0">
+                                        <frame key="frameInset" minX="174" width="73" height="75"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="73" id="XJ2-w7-8Iv"/>
+                                            <constraint firstAttribute="height" constant="75" id="j6D-iD-acY"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <state key="normal" image="9"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" distribution="fillEqually" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="6T2-T2-kzp">
+                                <frame key="frameInset" minX="64" minY="257" width="247" height="75"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VRk-Wc-5XB">
+                                        <frame key="frameInset" width="73" height="75"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="73" id="VbM-72-wAi"/>
+                                            <constraint firstAttribute="height" constant="75" id="ymw-SA-C1o"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <state key="normal" image="4"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wu9-j8-p8A">
+                                        <frame key="frameInset" minX="87" width="73" height="75"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="73" id="cc1-xe-sT8"/>
+                                            <constraint firstAttribute="height" constant="75" id="sLZ-ZN-s58"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <state key="normal" image="5"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HmC-lz-Vwa">
+                                        <frame key="frameInset" minX="174" width="73" height="75"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="73" id="IMx-UJ-yvq"/>
+                                            <constraint firstAttribute="height" constant="75" id="MP6-1b-H2B"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <state key="normal" image="6"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" distribution="fillEqually" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="xac-rm-mLy">
+                                <frame key="frameInset" minX="64" minY="347" width="247" height="75"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hBP-hX-6Lu">
+                                        <frame key="frameInset" width="73" height="75"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="75" id="GH5-mN-C1q"/>
+                                            <constraint firstAttribute="width" constant="73" id="Slf-DN-oZ9"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <state key="normal" image="1"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iea-cg-MO7">
+                                        <frame key="frameInset" minX="87" width="73" height="75"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="75" id="8L1-oA-FWq"/>
+                                            <constraint firstAttribute="width" constant="73" id="nz9-JW-Ien"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <state key="normal" image="2"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QAN-Nn-Xfr">
+                                        <frame key="frameInset" minX="174" width="73" height="75"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="75" id="Bop-pl-Tfo"/>
+                                            <constraint firstAttribute="width" constant="73" id="zfY-Jp-uz7"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <state key="normal" image="3"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" distribution="fillEqually" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="ez3-MZ-J5K">
+                                <frame key="frameInset" minX="64" minY="438" width="247" height="75"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l25-SZ-hDZ">
+                                        <frame key="frameInset" width="73" height="75"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="73" id="P2E-3g-6Lr"/>
+                                            <constraint firstAttribute="height" constant="75" id="gRM-Ai-rPx"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <state key="normal" image="7"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="poi-TC-9rA">
+                                        <frame key="frameInset" minX="87" width="73" height="75"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="73" id="09e-6Q-gu5"/>
+                                            <constraint firstAttribute="height" constant="75" id="hjS-RJ-IyN"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <state key="normal" image="8"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XCi-dO-x1P">
+                                        <frame key="frameInset" minX="174" width="73" height="75"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="73" id="77d-x1-rJj"/>
+                                            <constraint firstAttribute="height" constant="75" id="SYs-4M-iDM"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <state key="normal" image="9"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="ul7-Ph-JcA" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="1t9-bB-6ag"/>
+                            <constraint firstAttribute="trailing" secondItem="ul7-Ph-JcA" secondAttribute="trailing" id="2Te-zr-2xa"/>
+                            <constraint firstAttribute="trailing" secondItem="KlD-tY-xdj" secondAttribute="trailing" id="7dw-cB-Ubt"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="ul7-Ph-JcA" secondAttribute="bottom" id="92C-em-vMm"/>
+                            <constraint firstItem="KlD-tY-xdj" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="RM1-ov-SXJ"/>
+                            <constraint firstItem="ul7-Ph-JcA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="a8R-X0-2IM"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="KlD-tY-xdj" secondAttribute="bottom" id="q16-sr-of7"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="123.68815592203899"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="1" width="111" height="114"/>
+        <image name="2" width="111" height="114"/>
+        <image name="3" width="111" height="114"/>
+        <image name="4" width="111" height="114"/>
+        <image name="5" width="111" height="114"/>
+        <image name="6" width="111" height="114"/>
+        <image name="7" width="111" height="114"/>
+        <image name="8" width="111" height="114"/>
+        <image name="9" width="111" height="114"/>
+        <image name="backpanel" width="620" height="938"/>
+        <image name="counter" width="516" height="133"/>
+        <image name="ground" width="888" height="72"/>
+        <image name="space-bg" width="988" height="946"/>
+    </resources>
 </document>
